# pico-wav-player

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  wav_data.rs
