[package]
name = "pico-wav-player"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
rp2040-hal = "0.9"
rp2040-boot2 = "0.3"
panic-halt = "0.2"

[[bin]]
name = "pico-wav-player"
path = "src/main.rs"
test = false
bench = false

[profile.release]
debug = true
lto = true
opt-level = "z"

[features]
default = ["critical-section-impl"]
critical-section-impl = ["rp2040-hal/critical-section-impl"]
